app/css/gym_rides.scss
.gym-rides {
  h3 {
    color: $black;
    padding-left: rem-calc(40px);
    background-repeat: no-repeat;
    background-size: rem-calc(14px);
    min-height: rem-calc(16px);
    background-position: left center;
    background-position-x: rem-calc(12px);
    background-image: url('/img/location.svg');
  }
  ul {
    list-style-type: none;
    margin: 0px;
  }
  li {
    line-height: rem-calc(50px);
    max-height: rem-calc(50px);
    overflow: hidden;
    background-color: $grey_light;
    margin-bottom: rem-calc(10px);
    vertical-align: middle;
    .icon {
      padding-left: rem-calc(40px);
      background-repeat: no-repeat;
      background-size: 16px;
      background-position: left center;
      background-position-x: rem-calc(12px);
      background-image: url('/img/synced.svg');
    }
    .right {
      padding-right: rem-calc(10px);
    }
  }
  .removed {
    .icon,
    .name {
      opacity: 0.5;
      text-decoration: line-through;
    }
  }
  .remove {
    font-size: smaller;
  }
  a .remove {
    width: 15px;
    text-indent: -2000px;
    background: url('/img/remove.svg') no-repeat;
    background-position: center;
  }
  .time {
    overflow: hidden;
    font-size: x-small;
    font-style: italic;
  }
  .error {
    padding: 0;
    background-color: $savannah;
    .name {
      color: $body-font-color;
    }
    .icon {
      background: url('/img/ico16orng_syncerror.svg') no-repeat;
      background-position: center;
    }
    a {
      color: $peach;
      text-decoration: underline;
    }
  }
  .waiting {
    padding: 0;
    background-color: $green_light;
    .icon {
      background: url('/img/ico16orng_sent.svg') no-repeat;
      background-position: center;
    }
  }
}

.gym-rides, .user-invite {
    .syncing {
    background-color: $green_light;
    .icon {
      -webkit-animation-duration: 1.3s;
      -moz-animation-duration: 1.3s;
      animation-duration: 1.3s;
      -webkit-animation-iteration-count: infinite;
      -moz-animation-iteration-count: infinite;
      animation-iteration-count: infinite;
      -webkit-animation-name: rotate-forever;
      -moz-animation-name: rotate-forever;
      animation-name: rotate-forever;
      -webkit-animation-timing-function: linear;
      -moz-animation-timing-function: linear;
      animation-timing-function: linear;
      background-size: 16px auto;
      background-position: center;
      width: 18px;
      height: 18px;
      vertical-align: text-top;
      -moz-vertical-align: sub;
      display: inline-block;
      background-image: url('/img/syncing.svg');
    }
  }
}

